Fixed styling, never do overflow-x hidden i gues??

--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -35,8 +35,7 @@ html {
 }
 
 body {
-  height: 100%;
-  min-height: 35rem;
+  min-height: 100%;
   position: relative;
   font-family: 'Apex-New-Regular', 'Titillium Web', sans-serif;
   font-weight: 300;
@@ -50,10 +49,6 @@ h5,
 h6 {
   font-family: 'Apex-New-Bold', 'Titillium Web', sans-serif;
   font-weight: 700;
-}
-
-body {
-  overflow-x: hidden;
 }
 
 body .cookie-modal-container {
@@ -104,21 +99,21 @@ body .cookie-modal-container .cookie-modal .cookie-buttons .deny-cookie-button:h
   cursor: pointer;
 }
 
-@media (min-width: 1420px) {
+@media (min-width: 1300px) {
   body .cookie-modal-container .cookie-modal {
     width: 50vw;
     padding: 5vh;
   }
 }
 
-@media (max-width: 1420px) {
+@media (max-width: 1300px) {
   body .cookie-modal-container .cookie-modal {
     width: 80%;
     padding: 5%;
   }
 }
 
-@media (min-width: 1420px) {
+@media (min-width: 1300px) {
   body {
     overflow: hidden;
   }
@@ -144,6 +139,7 @@ body .bg-image {
   height: 50px;
   right: 0;
   margin: 20px;
+  z-index: 50;
 }
 
 .masthead {
@@ -191,7 +187,7 @@ body .bg-image {
   overflow-x: hidden;
 }
 
-@media (max-width: 1420px) {
+@media (max-width: 1300px) {
   .masthead .masthead-content .content-block.form-block h1 {
     display: none;
   }
@@ -203,13 +199,13 @@ body .bg-image {
   padding: 25% 10% 0 10%;
 }
 
-@media (min-width: 1420px) {
+@media (min-width: 1300px) {
   .masthead .masthead-content .content-block.text-block {
     padding: 5%;
   }
 }
 
-@media (min-width: 722px) and (max-width: 1420px) {
+@media (min-width: 722px) and (max-width: 1300px) {
   .masthead .masthead-content .content-block.text-block {
     padding: 10% 10% 0 10%;
   }
@@ -219,7 +215,7 @@ body .bg-image {
   margin-bottom: 8px;
 }
 
-@media (max-width: 1420px) {
+@media (max-width: 1300px) {
   .masthead .masthead-content .content-block.text-block h1 {
     padding-bottom: 15px;
   }
@@ -267,7 +263,7 @@ body .bg-image {
   }
 }
 
-@media (min-width: 1420px) {
+@media (min-width: 1300px) {
   .masthead .masthead-content .form .form-input-fields {
     padding: 20px 25px 20px 75px;
   }
@@ -328,7 +324,7 @@ body .bg-image {
   padding: 1rem;
 }
 
-@media (min-width: 1420px) {
+@media (min-width: 1300px) {
   .masthead {
     margin: 0;
     height: 100%;
@@ -418,7 +414,7 @@ body .bg-image {
   width: 4rem;
 }
 
-@media (min-width: 1420px) {
+@media (min-width: 1300px) {
   .social-icons {
     margin: 0;
     position: relative;
