--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -30,7 +30,7 @@
   }
 }
 
-@media (min-width: 1420px) {
+@media (min-width: 1300px) {
   .social-icons {
     margin: 0;
     position: relative;
